@@ -67,5 +67,7 @@ version 1.10.1 (2013-04-18)
 	* Updates scope for servlet 2.5 API dependency.
 
 version 1.11 (2015-03-16)
+    * Fixes potential NPE in MessageContext constructor.
+    * Cleans up code.
     * Upgrades to JSON-RPC 2.0 Base 1.36.
     * Upgrades to JSON Smart 1.3.1.
